[package]
name = "game_of_life"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.71"
fixedbitset = "0.4.0"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.22"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  "console",
  'Node',
  'Window',
]